# dsp-playground

./: .gitignore  CMakeLists.txt  ar.py  cascade.py  dsp.py  gauss_noise.py  interactive_cascade.py  noise.py  pink_filter.py  singlepole.py  voss.py  white.py
python/: cascade.py  dsp.py  fp_resonator.py  fp_tone.py  horizontal_cascade.py  noise.py  pink_filter.py  q_arithmetic.py  resonator.py  singlepole.py  ti_resonator.py  ti_resonator32.py  white.py
src/: audio.c  audio.h  audio_playback.c  audio_sm.c  resonator.c  resonator.h  simple_playback.c  simple_stereo_playback.c  types.h
